fix z-index on drag

--- a/Magic_Collection/wwwroot/css/main.css
+++ b/Magic_Collection/wwwroot/css/main.css
@@ -33,6 +33,6 @@ a:hover {
     margin : 100px;
 }
 
-.draggable {
-
+.draggable:hover {
+    z-index: 1;
 }
